--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,7 +2,16 @@ apiVersion: v1
 entries:
   static-src-people-detector-app:
   - apiVersion: v2
-    created: "2022-12-18T20:36:58.95895395+01:00"
+    created: "2022-12-18T21:02:20.665493113+01:00"
+    description: Static Source People Detector Helm chart for Kubernetes
+    digest: 53005e1767a5bc6d7f0600a6b59e500359ad016ad09c3ba8710918ca36d392a4
+    name: static-src-people-detector-app
+    type: application
+    urls:
+    - https://fimperato.github.io/static-src-people-detector-helm-repo/charts/static-src-people-detector-app-1.5.5.tgz
+    version: 1.5.5
+  - apiVersion: v2
+    created: "2022-12-18T21:02:20.664857169+01:00"
     description: Static Source People Detector Helm chart for Kubernetes
     digest: 0cad9474cc548cef2f0689c5d010ce64e2c2931efe882b6b3e5c0524c4fcf43f
     name: static-src-people-detector-app
@@ -10,4 +19,4 @@ entries:
     urls:
     - https://fimperato.github.io/static-src-people-detector-helm-repo/charts/static-src-people-detector-app-1.5.0.tgz
     version: 1.5.0
-generated: "2022-12-18T20:36:58.957841865+01:00"
+generated: "2022-12-18T21:02:20.664135666+01:00"
